--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </script>
     </head>
     <body>
-        <body onresize="init()">
+        <body>
             <div id="flag">
             </div>
             <!-- <svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink">
