--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
         </script>
     </head>
     <body>
-        <body onresize="init()">
+        <body>
             <div id="flag">
             </div>
             <!-- <svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink">
                 <rect width="100" height="100" fill="#f06"></rect>
             </svg> -->
+            <a class="text" id="gender_number"></a>
             <a class="text" id="gender"></a>
             <a class="text" id="button" onclick="redo()">Another one!</a>
         </body>
